# harmonics-cli

./: .markdownlint-cli2.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.claude/: skills.local.yaml.example
.claude/skills/ask-colleague/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/communicate/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/remember/: SKILL.md
.claude/skills/talk/: SKILL.md
.claude/skills/talk/scripts/: talk.sh
.devague/: current  current_plan
.devague/frames/: harmonics-gives-an-agent-or-robot-its-own-non-spee.json  harmonics-ships-a-demo-command-one-command-tours-t.json
.devague/plans/: harmonics-gives-an-agent-or-robot-its-own-non-spee.json  harmonics-ships-a-demo-command-one-command-tours-t.json
.github/workflows/: publish.yml  tests.yml
docs/: ear-test-protocol.md  skill-sources.md
docs/plans/: 2026-07-08-harmonics-gives-an-agent-or-robot-its-own-non-spee.md  2026-07-08-harmonics-ships-a-demo-command-one-command-tours-t.md
docs/specs/: 2026-07-08-harmonics-gives-an-agent-or-robot-its-own-non-spee.md  2026-07-08-harmonics-ships-a-demo-command-one-command-tours-t.md
harmonics/: __init__.py  __main__.py  axes.py  contour.py  identity.py  inference.py  mapping.py  notes.py  stress.py  variation.py
harmonics/audio/: __init__.py  _playback.py  synth.py
harmonics/cli/: __init__.py  _errors.py  _output.py
harmonics/cli/_commands/: cli.py  demo.py  doctor.py  explain.py  learn.py  overview.py  play.py  say.py  whoami.py
harmonics/demo/: __init__.py  core.py  files.py  gallery.py  matrix.py  play.py
harmonics/explain/: __init__.py  catalog.py
tests/: ear_harness.py  test_audio.py  test_axes.py  test_cli.py  test_cli_introspection.py  test_contour.py  test_demo_cli.py  test_demo_files.py  test_demo_gallery.py  test_demo_matrix.py  test_demo_play.py  test_demo_showcase.py  test_ear_harness.py  test_identity.py  test_inference.py  test_mapping.py  test_notes.py  test_play.py  test_say.py  test_stress.py  test_variation.py
