[project]
name = "harmonics-cli"
version = "0.7.0"
description = "An agent + CLI giving agents and robots non-TTS (non-speech) audio: express meaning through pleasant sonic signatures — chimes, flutes, pulses, and tonal motifs mapped to intent, confidence, urgency, state, and identity. Turns text/sentences into notes and audio (text-to-notes / text-to-audio)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{name = "AgentCulture"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]
dependencies = []

# Opt-in audio I/O. The core (text->notes + offline WAV render) stays
# dependency-free and offline-testable — see CLAUDE.md's "runtime dependencies
# stay empty" invariant — so live playback is isolated behind this extra rather
# than in `dependencies`. `harmonics play`/`say`/`demo` only need it for the
# live `--play` flag; `--wav`/`--out`/`--html` and every read/describe verb work
# with no extra installed.
#
#   uv tool install 'harmonics-cli[audio]'     # or: pip install 'harmonics-cli[audio]'
#
# sounddevice ships manylinux/macOS/Windows wheels that bundle PortAudio (no
# compiler needed, unlike simpleaudio, which has no cp312 wheels); its
# `play()` convenience function requires numpy. `harmonics.audio.play` still
# also accepts a hand-installed `simpleaudio` if you prefer it.
[project.optional-dependencies]
audio = ["sounddevice>=0.4.6", "numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/agentculture/harmonics-cli"
Issues = "https://github.com/agentculture/harmonics-cli/issues"

[project.scripts]
harmonics = "harmonics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harmonics"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=4.1",
    "bandit>=1.7.5",
    "flake8>=6.1",
    "isort>=5.12.0",
    "black>=23.7.0",
    "teken>=0.8",
]

[tool.coverage.run]
source = ["harmonics"]
omit = ["harmonics/__pycache__/*"]
# Emit repo-relative paths in coverage.xml so SonarCloud maps them to
# sonar.sources=harmonics (absolute/.venv paths fail to map → empty coverage).
relative_files = true

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["harmonics"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
